--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ phpunit.phar
 /backend/web/index.php
 /backend/web/index-test.php
 /backend/web/robots.txt
+/backend/views_default
+/backend/views_admin_lte_default
