Настроил админку, настроил вывод фронта. Сделал таблицы и модели заявок и клиентов, crud, экспортировал данные из старой таблицы lan_orders. Настроил поиск по заявкам Добавил сортировку по датам, активная ссылка на название. Сделал портфолио

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "picqer/php-barcode-generator": "*",
         "kartik-v/yii2-widget-select2": "^2.2",
         "vova07/yii2-select2-widget": "^0.1.2",
-        "hail812/yii2-adminlte3": "~1.1"
+        "hail812/yii2-adminlte3": "~1.1",
+        "kartik-v/yii2-field-range": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
